<resources>
    <string name="app_name">SmartHomeMobileApp</string>
    <string name="title_devices">Devices</string>
    <string name="title_automation">Automation</string>
    <string name="title_user">User</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="backward">Backward</string>
</resources>