<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_devices">

    <fragment
        android:id="@+id/navigation_devices"
        android:name="com.itmo.smarthome.smarthomemobile.app.ui.home.HomeFragment"
        android:label="@string/title_devices"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_automation"
        android:name="com.itmo.smarthome.smarthomemobile.app.ui.dashboard.DashboardFragment"
        android:label="@string/title_automation"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.itmo.smarthome.smarthomemobile.app.ui.notifications.NotificationsFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_notifications" />
</navigation>