<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="32dp">

    <ImageButton
        android:id="@+id/imgBtn_register_backward"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/backward"
        android:src="@drawable/bg_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/et_register_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/element_layout_height"
            android:layout_marginTop="@dimen/element_vertical_margin"
            android:layout_marginBottom="@dimen/element_vertical_margin"
            android:autofillHints="emailAddress"
            android:background="@drawable/bg_edit_text"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/et_register_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/element_layout_height"
            android:layout_marginTop="@dimen/element_vertical_margin"
            android:layout_marginBottom="@dimen/element_vertical_margin"
            android:autofillHints="username"
            android:background="@drawable/bg_edit_text"
            android:gravity="center"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/et_register_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/element_layout_height"
            android:layout_marginTop="@dimen/element_vertical_margin"
            android:layout_marginBottom="@dimen/element_vertical_margin"
            android:autofillHints="password"
            android:background="@drawable/bg_edit_text"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/bt_register_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/element_layout_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/element_vertical_margin"
            android:layout_marginBottom="@dimen/element_vertical_margin"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:text="@string/register"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            app:cornerRadius="500dp"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>